cloud/collabora/service.yml
apiVersion: v1
kind: Service
metadata:
  name: collabora
  namespace: cloud
spec:
  type: ClusterIP
  selector:
    app: collabora
  ports:
    - name: http
      port: 9980
      targetPort: 9980
