cloud/collabora/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - collab.cloud.starsystem.dev
      secretName: collabora-tls
  rules:
    - host: collab.cloud.starsystem.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collabora
                port:
                  number: 9980
